--- a/notes-api/api/.env.example
+++ b/notes-api/api/.env.example
@@ -1,6 +1,5 @@
-DB_CONNECTION=pg
-DB_HOST=localhost
+DB_HOST=notes-db
 DB_PORT=5432
-DB_USER=
+DB_USER=postgres
 DB_DATABASE=notesdb
-DB_PASSWORD=
+DB_PASSWORD=secret
